# -project

./: CMakeLists.txt  Japanese.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.txt
